add test for json-formatter