@@ -11,6 +11,7 @@ import java.nio.file.Paths;
 public class DifferTest {
     static String expectStylishString;
     static String expectPlainString;
+    static String expectJsonString;
     static File jsonFile1;
     static File jsonFile2;
     static File yamlFile1;
@@ -24,8 +25,9 @@ public class DifferTest {
         yamlFile1 = Paths.get("src/test/resources/oneTest.yml").toFile();
         yamlFile2 = Paths.get("src/test/resources/twoTest.yml").toFile();
 
-        expectStylishString = new String(Files.readAllBytes(Paths.get("src/test/resources/expectStylish.txt")));
-        expectPlainString = new String(Files.readAllBytes(Paths.get("src/test/resources/expectPlain.txt")));
+        expectStylishString = Files.readString(Paths.get("src/test/resources/expectStylish.txt"));
+        expectPlainString = Files.readString(Paths.get("src/test/resources/expectPlain.txt"));
+        expectJsonString = Files.readString(Paths.get("src/test/resources/expectJson.json"));
     }
 
     @Test
@@ -45,6 +47,14 @@ public class DifferTest {
     }
 
     @Test
+    public void testDifferJsonJson() throws Exception {
+        String actual = Differ.generate(jsonFile1, jsonFile2, "json");
+        System.out.println(expectJsonString);
+        System.out.println(actual);
+        assertEquals(expectJsonString, actual);
+    }
+
+    @Test
     public void testDifferYamlStylish() throws Exception {
         String actual = Differ.generate(yamlFile1, yamlFile2, "stylish");
         System.out.println(expectStylishString);
@@ -58,5 +68,13 @@ public class DifferTest {
         System.out.println(expectPlainString);
         System.out.println(actual);
         assertEquals(expectPlainString, actual);
+    }
+
+    @Test
+    public void testDifferYamlJson() throws Exception {
+        String actual = Differ.generate(yamlFile1, yamlFile2, "json");
+        System.out.println(expectJsonString);
+        System.out.println(actual);
+        assertEquals(expectJsonString, actual);
     }
 }
